# AP2

./: CHANGELOG.md  REPO_TREE.md  _check_ap2.py  git-push-all.ps1  mkdocs.yml  run.ps1
core/python/: pyproject.toml
docs/: a2a-extension.md  faq.md  glossary.md  specification.md
docs/topics/: ap2-and-x402.md  life-of-a-transaction.md  what-is-ap2.md
notebooks/: dominios_3_4_engenharia_performance.ipynb
ysh/docs/: index.md  (+7 more)
ysh/domains/origination-viabilidade/apps/origination_api/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
ysh/domains/origination-viabilidade/apps/origination_api/app/: main.py
ysh/domains/origination-viabilidade/apps/origination_api/app/core/: config.py  db.py
ysh/domains/origination-viabilidade/apps/origination_api/app/events/: nats_bus.py
ysh/domains/origination-viabilidade/apps/origination_api/app/models/: leads.py
ysh/domains/origination-viabilidade/apps/origination_api/app/routers/: leads.py
ysh/domains/origination-viabilidade/apps/origination_api/app/schemas/: leads.py
ysh/domains/origination-viabilidade/apps/origination_api/app/services/: geo_enrichment.py  geo_store.py  recommendations.py  sizing.py
ysh/domains/origination-viabilidade/apps/origination_api/configs/: project_size_bands.yaml  recommendation_tiers.yaml  scee.modalidades.json  upsell_rules.yaml
ysh/domains/origination-viabilidade/apps/origination_api/contracts/: asyncapi.yaml  openapi.yaml
ysh/domains/origination-viabilidade/apps/origination_api/tests/: conftest.py  test_geo_enrichment.py  test_geo_store.py  test_health.py  test_services.py
(+161 files in other folders)
